complete manual structure by template

--- a/definitions-and-specification.tex
+++ b/definitions-and-specification.tex
@@ -3,13 +3,34 @@
 
 % --- general del proyecto
 \subsection{Definición general del proyecto de software}
+\subsubsection{Propósito}
+\subsubsection{Público objetivo y sugerencias de lectura}
+\subsubsection{Alcance del producto}
+\subsubsection{Perspectiva del producto}
+\subsubsection{Clases y características del usuario}
 
 % ---
 
+% --- espectificacion de requerimientos
 \subsection{Especificación de requerimientos del proyecto}
-
 \subsubsection{Requisitos generales}
-
 \input{functional-requirements.tex}
-
 \subsubsection{Alcance del sistema}
+% ---
+
+% --- procedimientos de instalación y prueba
+\subsection{Procedimientos de instalación y prueba}
+\subsubsection{Procedimientos de desarrollo}
+
+\subsubsection{Planificación}
+
+% ---
+
+% --- alcances tecnicos
+\subsection{Alcances Técnicos}
+
+\subsubsection{Requisitos no funcionales}
+\subsubsection{Obtención e instalación}
+\subsubsection{Especificaciones de prueba y ejecución}
+
+% ---
