--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,15 @@
 \usepackage{fontenc}
 \usepackage{graphicx}
 
+\usepackage{titlesec}
+
+\setcounter{secnumdepth}{4}
+
+\titleformat{\paragraph}
+{\normalfont\normalsize\bfseries}{\theparagraph}{1em}{}
+\titlespacing*{\paragraph}
+{0pt}{3.25ex plus 1ex minus .2ex}{1.5ex plus .2ex}
+
 % \usepackage[dvips]{hyperref} % dont know why it doesnt work, or what it is
 
 \date{10-07-22}
