--- a/system-architecture.tex
+++ b/system-architecture.tex
@@ -2,3 +2,6 @@
 
 \section{Arquitectura del sistema}
 
+\subsection{Descripción jerarquizada}
+\subsection{Diagrama de módulos}
+\subsection{Diseño del modelo de datos}
