utilize tabularx for better table formatting

--- a/changelog.tex
+++ b/changelog.tex
@@ -1,7 +1,7 @@
 % !TeX spellcheck = es_ES
-\begin{tabular}{ | c | c | c | c | }
+\begin{tabularx}{\textwidth}{ | c | c | X | c | }
 	\hline
 	Versión & Fecha & Descripción & Autor \\ \hline
 	1.0 & 10 de julio de 2022 & Versión inicial del documento & Cristóbal Espinoza \\
 	\hline
-\end{tabular}
+\end{tabularx}
