--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,14 @@
 % !TeX spellcheck = es_ES
 \documentclass[a4paper,12pt]{article}
 
+\usepackage[letterpaper,margin=1in]{geometry}
+
 \usepackage{ucs}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage{fontenc}
 \usepackage{graphicx}
+\usepackage{tabularx}
 
 \usepackage{titlesec}
 
