--- a/definitions-and-specification.tex
+++ b/definitions-and-specification.tex
@@ -14,6 +14,15 @@
 % --- espectificacion de requerimientos
 \subsection{Especificación de requerimientos del proyecto}
 \subsubsection{Requisitos generales}
+
+El sistema dispondrá de los siguientes módulos y submódulos mediante los cuales
+se pondrá acceder a todas y cada una de las funcionalidades, las cuales serán 
+descritas más adelante:
+
+\begin{enumerate}
+    \item 
+\end{enumerate}
+
 \input{functional-requirements.tex}
 \subsubsection{Alcance del sistema}
 % ---
